# sba_python

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.org  appveyor.yml  azure-pipelines.yml  build.sh  build_ros1.sh  docker_build.sh  package.xml  run_build.sh  setup.py  test.py
.github/workflows/: kinetic.yml  main.yml  melodic.yml  python.yml
include/sparse_bundle_adjustment/: csparse.h
src/: python_interface.cpp
