<?xml version="1.0"?>
<package format="2">
    <name>sba_python</name>
    <version>0.4.2</version>
    <description>Python wrapper for the sparse_bundle_adjustment library</description>

    <maintainer email="safijari@isu.edu">Jariullah Safi</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pybind11-dev</build_depend>
    <depend>eigen</depend>
    <depend>libopenblas-dev</depend>
    <depend>liblapack-dev</depend>
    <depend>libblas-dev</depend>
    <depend>suitesparse</depend>

    <export>
        <!-- <build_type>ament_python</build_type> -->
    </export>
</package>
